@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.776 2008/10/24 08:52:57 martin Exp $
+# $Id: CHANGES,v 1.777 2008/10/24 11:23:03 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2008/10/24) Added StopAfterMatch attribute on postmaster filter (DB and
+    config backend).
  - (2008/10/23) First version of improved ticket overview modus, added S/M/L
     options.
  - (2008/10/23) Added ticket change time option to agent ticket search.
